fixed alignment

--- a/style.css
+++ b/style.css
@@ -90,11 +90,11 @@ body {
 
 #profile-container {
 
-    width: 70%;
+    width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
-    margin-left: 18%;
+
     flex-direction: row;
 
 
@@ -147,7 +147,7 @@ body {
     left: 235px;
     width: 100px;
     border: 3px solid #8360c398;
-    margin-left: 360px;
+    margin-left: 10px;
 
 }
 
